# cavOTF

./: .gitignore  LM_DFTB_parallel.py  MANIFEST.in  README.md  client.py  client_DFTB.py  input.txt.example  pyproject.toml  run.py  run_extend.py  run_first.py  run_second.py  sbatch_template.sh.example  server.py  server_DFTB.py
DFTB_clean/: client_DFTB.py  dftb.py  funcLM.py
cavotf/: __init__.py  __main__.py  cli.py  config.py  dftb.py  dynamics.py  geometry.py  hpc.py  server_DFTB.py  workflow.py
cavotf.egg-info/: PKG-INFO
cavotf/docs/: USAGE.md
cavotf/resources/DFTB_clean/: client_DFTB.py  client_DFTB_extend.py  dftb.py  funcLM.py  get_mu.py  muDFTB.slurm
docs/: USAGE.md
examples/: example.md  input.txt
examples/geometries/MDLM_2_1/: run.py  run_client.sbatch
examples/geometries/MDLM_2_1/DFTB_clean/: dftb.py  get_mu.py
examples/geometries/MDLM_2_1/run-0/: cavityDFTB.slurm  client_DFTB_extend.py  funcLM.py  muDFTB.slurm  workflow.sh
package/cavotf/: client_DFTB.py  config.py  core.py  dftb.py  dftbLM.py  funcLM.py  stage1_get_mu.py  stage2_thermal.py  stage3_run_md.py
run-0/: WaterMD_Cavity.xyz  client_DFTB.py  dftb.py
src/cavotf/: __init__.py  cli.py  config.py  dynamics.py  parameters.py  workflow.py
src/cavotf/resources/: __init__.py  run_client.sbatch  run_server.sbatch
src/cavotf/resources/DFTB_clean/: cavityDFTB.slurm  get_mu.py  muDFTB.slurm
