[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cavotf"
version = "0.1.0"
description = "Packaged cavOTF workflow runner"
authors = [{name = "cavOTF maintainers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
]

[project.scripts]
cavotf = "cavotf.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cavotf.resources" = ["**/*"]
