[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cavotf"
version = "0.1.0"
description = "Cavity molecular dynamics workflow runner"
authors = [{name = "CAVOTF Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "ase",
]

[project.scripts]
cavotf = "cavotf.cli:main"

[tool.setuptools.packages.find]
include = ["cavotf"]

[tool.setuptools.package-data]
cavotf = ["resources/DFTB_clean/*.py", "resources/DFTB_clean/*.slurm"]
