[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cavotf"
version = "0.1.0"
description = "Cavity molecular dynamics workflow runner"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "CAVOTF Team"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "ase",
]

[project.scripts]
cavotf = "cavotf.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cavotf", "cavotf.*"]

[tool.setuptools.package-data]
cavotf = ["resources/**/*"]
